--- a/110_1Mid/110_1Mid.csproj
+++ b/110_1Mid/110_1Mid.csproj
@@ -67,14 +67,41 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="eye-slash-solid.svg" />
+    <Content Include="eye-solid.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Sample1.aspx" />
+    <Content Include="Sample1Com.aspx" />
+    <Content Include="Sample2.aspx" />
     <Content Include="Web.config" />
+    <Content Include="youtube-brands.svg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample1.aspx.cs">
+      <DependentUpon>Sample1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sample1.aspx.designer.cs">
+      <DependentUpon>Sample1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Sample1Com.aspx.cs">
+      <DependentUpon>Sample1Com.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sample1Com.aspx.designer.cs">
+      <DependentUpon>Sample1Com.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Sample2.aspx.cs">
+      <DependentUpon>Sample2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sample2.aspx.designer.cs">
+      <DependentUpon>Sample2.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
